--- a/app.json
+++ b/app.json
@@ -1,10 +1,8 @@
 
 {
-  "name": "Flask VueJs Template",
-  "description": "",
-  "repository": "https://github.com/gtalarico/flask-vuejs-template",
-  "logo": "https://raw.githubusercontent.com/gtalarico/flask-vuejs-template/master/app/client/app/src/assets/img/logo.png",
-  "keywords": ["flask", "vue"],
+  "name": "Kaja",
+  "description": "Jewelry Marketplace",
+  "repository": "https://github.com/nhuynh3/kaja",
   "env": {
     "FLASK_ENV": {
       "description": "Flask Enviroment",
